<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">扶贫</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_string">img</string>

    <!-- 其他 -->

    <!-- MainActivity -->
    <string name="activity_main_title">扶贫中心</string>
    <string name="activity_main_home">首页</string>
    <string name="activity_main_collect">收藏</string>
    <string name="activity_main_find">发现</string>
    <string name="activity_main_me">我</string>

    <!-- HomeFragment -->
    <string name="fm_home_gridview_0">电子地图</string>
    <string name="fm_home_gridview_1">基础信息</string>
    <string name="fm_home_gridview_2">帮扶管理</string>
    <string name="fm_home_gridview_3">扶贫项目管理</string>
    <string name="fm_home_gridview_4">信息公告</string>
    <string name="fm_home_gridview_5">统计分析</string>
    
    <!-- 电子地图 MapWebViewActivity -->
    <string name="ac_map_webview_title">电子地图</string>
    
    <!-- 登录页面 LoginActivity -->
    <string name="ac_login_title">竹溪扶贫大数据中心</string>
    <string name="login_username">账户</string>
    <string name="login_pwd">密码</string>
    <string name="login_username_dialog">请输入您的用户名</string>
    <string name="login_pwd_dialog">请输入您的密码</string>
    <string name="login_pwd_remember">记住密码</string>
    <string name="activity_login_title">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="login_input_error_info">请检查输入</string>

</resources>