<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ac_login_title"
        android:textSize="@dimen/text_size_24"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"/>
    
    <!-- 登录块  -->
    <LinearLayout
        style="@style/activity_login_linear_v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_kuang"
        android:orientation="vertical" >

        <!-- 用户名 -->
        <LinearLayout
            style="@style/activity_login_linear_h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >

            <TextView
                style="@style/publish_item_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_username" />

            <EditText
                android:id="@+id/ac_login_username_et"
                style="@style/publish_editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username_dialog"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_gray" />

        <!-- 密码 -->
        <LinearLayout
            style="@style/activity_login_linear_h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/publish_item_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_pwd" />

            <EditText
                android:id="@+id/ac_login_pwd_et"
                style="@style/publish_editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pwd_dialog"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout> 
    
    <!-- 记住密码 -->
	<CheckBox
	    android:id="@+id/ac_login_remember_cb"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/login_pwd_remember"/>

	<Button
	    android:id="@+id/ac_login_submit_bt"
	    style="@style/activity_login_linear_v"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/activity_login_title"
	    android:background="@drawable/button_blue_selector"
	    android:gravity="center"/>

</LinearLayout>