<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.leo.mainfragmentdemo.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <FrameLayout
            android:id="@+id/ac_main_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </FrameLayout>

        <RadioGroup
            android:id="@+id/ac_main_bottomgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/table_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp" >

            <RadioButton
                android:id="@+id/ac_main_radio_home"
                style="@style/small_gray_textstyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/table_home_seleter"
                android:gravity="center"
                android:text="@string/activity_main_home" />

            <RadioButton
                android:id="@+id/ac_main_radio_collection"
                style="@style/small_gray_textstyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/table_collection_seleter"
                android:gravity="center"
                android:text="@string/activity_main_collect" />

            <RadioButton
                android:id="@+id/ac_main_radio_find"
                style="@style/small_gray_textstyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/table_find_seleter"
                android:gravity="center"
                android:text="@string/activity_main_find" />

            <RadioButton
                android:id="@+id/ac_main_radio_me"
                style="@style/small_gray_textstyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/table_me_seleter"
                android:gravity="center"
                android:text="@string/activity_main_me" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>